--- a/inventario/WebContent/index.zul
+++ b/inventario/WebContent/index.zul
@@ -18,7 +18,7 @@
 		execution.getParameter("respuesta");
 	</zscript>
 	<window height="100%" width="100%" title="" border="0"
-		contentStyle="overflow:auto" apply="controlador.portal.CIndex">
+		contentStyle="overflow:auto" apply="security.controlador.CIndex">
 		<borderlayout height="100%"
 			style="background-image: url('public/imagenes/generales/equipos.png'); background-repeat:no-repeat; background-color:white">
 			<north height="2%" class="banner">
@@ -40,12 +40,12 @@
 					<separator />
 					<separator />
 					<separator />
-					<div width="100%" height="100%" align="center">
-						<groupbox closable="false" height="100%" width="60%">
+					<div height="100%" width="100%" align="center">
+						<groupbox closable="false" height="100%" width="115%">
 							<caption label="${a}"
 								style="color:black; font-size: 20px; font-weight:bold" />
-							<separator></separator>
-							<separator></separator>
+							<separator />
+							<separator />
 							<hlayout width="100%">
 								<h:form id="inicioSesion" action="j_spring_security_check"
 									method="POST" xmlns:h="native" align="left">
@@ -53,21 +53,21 @@
 										<label class="etiqueta" height="20px" style="font-size:14px"
 											value="Nombre de Usuario :" />
 										<textbox placeholder="Usuario" height="22px" id="log_usuario"
-											name="j_username" hflex="1" width="200px" />
+											name="username" hflex="1" width="200px" value="frivero" />
 									</vlayout>
-									<separator></separator>
+									<separator />
 									<vlayout width="100%">
 										<label class="etiqueta" height="20px" style="font-size:14px"
 											value="Contraseña :" />
 										<textbox placeholder="Contraseña" height="22px" id="log_clave"
-											hflex="1" type="password" name="j_password" width="200px" />
+											hflex="1" type="password" name="password" width="200px" value="0" />
 									</vlayout>
 									<separator />
 									<separator />
 									<hlayout width="100%">
 										<button type="submit" class="btn" label="Entrar"
-											style="font-size:18px" image="/public/imagenes/botones/entrar.png"
-											height="37px" width="170px" />
+											image="/public/imagenes/botones/entrar.png" height="37px"
+											width="170px" style="font-size:18px" />
 									</hlayout>
 								</h:form>
 							</hlayout>
