--- a/inventario/WebContent/vistas/inicio.zul
+++ b/inventario/WebContent/vistas/inicio.zul
@@ -1,8 +1,36 @@
 <?page id="mainPage" title="Inventario de Equipos" contentType="text/html;charset=utf-8"?>
 <zk>
+<style>
+		.z-tree-icon .z-tree-open {
+		background-image:
+		url('../public/imagenes/generales/carpetaCerrada.png');
+		background-repeat:no-repeat;
+		background-size: cover;
+		width: 100%;
+		}
+
+		.z-tree-icon
+		.z-tree-close {
+		background-image:
+		url('../public/imagenes/generales/carpetaAbierta.png');
+		background-repeat:no-repeat;
+		background-size: cover;
+		width: 100%;
+		}
+		/*remove the font awesome icon*/
+		.z-tree-icon .z-tree-open::before,
+		.z-tree-icon .z-tree-close::before {
+		content: '';
+		}
+
+		span.z-tree-spacer:nth-last-child(2):before {
+		font-family: fontawesome;
+		content: url('../public/imagenes/generales/hoja.png');;
+		}
+	</style>
 	<style src="../public/Estilo.css" />
 	<script src="/public/progress.js" />
-	<window title="" border="0" height="100%" width="100%" apply="arbol.CArbol">
+	<window title="" border="0" height="100%" width="100%" apply="security.controlador.CArbol">
 		<borderlayout height="100%" style="background-color:#fff;">
 			<north height="10%" class="banner">
 				<hbox hflex="1">
@@ -76,9 +104,9 @@
 					</div>
 				</hbox>
 			</north>
-			<west title="Menú" id="west" size="19%" splittable="true"
+			<west title="Menú" id="west" size="20%" splittable="true"
 				collapsible="true" autoscroll="true">
-				<tree id="arbolMenu" width="99%" zclass="z-vfiletree">
+				<tree id="arbolMenu" width="99%">
 					<template name="model">
 						<treeitem context="menupopup">
 							<treerow>
