--- a/inventario/src/reportes/RAuditoria.jrxml
+++ b/inventario/src/reportes/RAuditoria.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.1.0.final using JasperReports Library version 6.1.0  -->
-<!-- 2016-02-16T10:36:04 -->
+<!-- 2016-02-17T19:05:02 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="REquipos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="954e9c0e-f556-4e6e-980b-3fc97173d2df">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="inventario_equipo"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -115,30 +115,40 @@
 		<band splitType="Stretch"/>
 	</columnHeader>
 	<detail>
-		<band height="22" splitType="Stretch">
+		<band height="53" splitType="Stretch">
 			<textField>
 				<reportElement x="1" y="0" width="56" height="20" uuid="fb4a9b87-6cad-4510-8be6-69126d75d8bd"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{identificacionEquipo}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="67" y="0" width="94" height="20" uuid="be4917ca-c4c7-4c8e-886f-42937166a977"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{serial}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="170" y="0" width="80" height="20" uuid="9712e255-7414-45a6-a6b8-c1b848f81d87"/>
-				<textElement textAlignment="Center"/>
+				<reportElement x="170" y="0" width="80" height="53" uuid="9712e255-7414-45a6-a6b8-c1b848f81d87"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="262" y="0" width="100" height="20" uuid="26a617b1-6e89-4d1a-acec-0534b10089c6"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{usuario.nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="372" y="0" width="102" height="20" uuid="df6014e5-2827-4ef3-bf3e-b388ca3611cf"/>
-				<textElement textAlignment="Left"/>
+				<textElement textAlignment="Left">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{estatus}]]></textFieldExpression>
 			</textField>
 			<line>
