--- a/inventario/WebContent/index.zul
+++ b/inventario/WebContent/index.zul
@@ -1,10 +1,13 @@
+<?page id="mainPage" title="SISTEMA DE INVENTARIO DE EQUIPOS" contentType="text/html;charset=utf-8"?>
 <zk>
 	<style src="public/Estilo.css" />
 
 	<style>
-		.z-groupbox-hr { background:#71AA00;border-radius: 30px 30px
-		30px 30px }
-		.z-groupbox { border-radius: 30px 30px 30px 30px }
+		.z-groupbox-hr { background:#298D4D;border-radius: 30px 30px
+		30px 30px } .z-groupbox { border-radius: 30px 30px 30px 30px }
+		.error { padding: 15px; margin-bottom: 20px; border: 1px solid
+		transparent; border-radius: 4px; color: #a94442;
+		background-color: #f2dede; border-color: #ebccd1; }
 	</style>
 	<zscript>
 		String variable = execution.getParameter("respuesta");
@@ -17,81 +20,114 @@
 		a =
 		execution.getParameter("respuesta");
 	</zscript>
-	<window height="100%" width="100%" title="" border="0"
-		contentStyle="overflow:auto" apply="security.controlador.CIndex">
-		<borderlayout height="100%"
-			style="background-image: url('public/imagenes/generales/equipos.png'); background-repeat:no-repeat; background-color:white">
-			<north height="2%" class="banner">
-			</north>
-			<east width="75%" border="none">
-				<vbox height="100%" align="end" pack="center">
-					<div width="100%" height="100%" align="right">
-						<image src="/public/imagenes/generales/logo1.jpg" />
-					</div>
-					<separator />
-					<separator />
-					<separator />
-					<separator />
-					<label height="100%" class="lblIndex"
-						value="SISTEMA DE INVENTARIO DE EQUIPOS" />
-					<separator />
-					<separator />
-					<separator />
-					<separator />
-					<separator />
-					<separator />
-					<div height="100%" width="100%" align="center">
-						<groupbox closable="false" height="100%" width="115%">
-							<caption label="${a}"
-								style="color:black; font-size: 20px; font-weight:bold" />
-							<separator />
-							<separator />
-							<hlayout width="100%">
-								<h:form id="inicioSesion" action="j_spring_security_check"
-									method="POST" xmlns:h="native" align="left">
-									<vlayout width="100%">
-										<label class="etiqueta" height="20px" style="font-size:14px"
-											value="Nombre de Usuario :" />
-										<textbox placeholder="Usuario" height="22px" id="log_usuario"
-											name="username" hflex="1" width="200px" value="frivero" />
-									</vlayout>
-									<separator />
-									<vlayout width="100%">
-										<label class="etiqueta" height="20px" style="font-size:14px"
-											value="Contraseña :" />
-										<textbox placeholder="Contraseña" height="22px" id="log_clave"
-											hflex="1" type="password" name="password" width="200px" value="0" />
-									</vlayout>
-									<separator />
-									<separator />
-									<hlayout width="100%">
-										<button type="submit" class="btn" label="Entrar"
-											image="/public/imagenes/botones/entrar.png" height="37px"
-											width="170px" style="font-size:18px" />
-									</hlayout>
-								</h:form>
-							</hlayout>
-							<vlayout width="100%">
-								<separator />
-								<separator />
-								<a href="">
-									<label id="lblOlvidoClave" sclass="pointer"
-										value="¿Olvido su Contraseña?"
-										style="color:red;margin-left:10px;font-weight:bold;font-size:14px" />
-								</a>
-							</vlayout>
-						</groupbox>
-					</div>
-				</vbox>
-			</east>
-			<south class="banner" border="0" height="5%" collapsible="false">
+	<window title="" border="0" height="100%" width="100%"
+		apply="security.controlador.CIndex">
+		<borderlayout height="100%" style=" background-color:white">
+			<north height="2%" class="banner"></north>
+			<south class="banner" border="0" height="5%"
+				collapsible="false">
 				<div align="center" sclass="footer">
 					<separator></separator>
 					<label style="padding-center:35%;color: white"
-						value="© 2015 Serloveca C.A | RIF: J-30940783-0 | Todos los derechos reservados | Desarrollado por BIZAPPS,C.A">
+						value="© 2016 TMI | Todos los derechos reservados | Desarrollado por TMI">
 					</label>
 				</div>
 			</south>
+			<center>
+				<div align="center">
+
+					<vbox height="100%" align="center">
+
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+
+						<image
+							src="/public/imagenes/generales/logo1.jpg" />
+
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<div align="center">
+							<label height="100%" class="lblIndex"
+								value="SISTEMA DE INVENTARIO DE EQUIPOS" />
+						</div>
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<separator />
+						<div height="100%" width="100%"
+							align="center">
+
+							<zk if="${variable!=null}">
+								<div class="error">${variable}</div>
+								<separator />
+							</zk>
+
+
+							<groupbox style="padding-left: 
+						0%;"
+								closable="false" height="100%" width="70%">
+								<caption label="INICIAR SESION"
+									style="color:black; font-size: 20px; font-weight:bold" />
+
+								<separator />
+								<hlayout width="100%">
+									<h:form id="inicioSesion"
+										action="j_spring_security_check" method="POST"
+										xmlns:h="native" align="center">
+										<vlayout width="100%">
+											<label class="etiqueta"
+												height="20px" style="font-size:14px"
+												value="Nombre de Usuario :" />
+											<textbox
+												placeholder="Usuario" height="22px" id="log_usuario"
+												value="" name="username" hflex="1" width="200px" />
+										</vlayout>
+										<separator />
+										<vlayout width="100%">
+											<label class="etiqueta"
+												height="20px" style="font-size:14px" value="Contraseña :" />
+											<textbox
+												placeholder="Contraseña" height="22px" id="log_clave"
+												value="" hflex="1" type="password" name="password"
+												width="200px" />
+										</vlayout>
+										<separator />
+										<separator />
+										<hlayout width="100%">
+											<button type="submit"
+												class="btn" label="Entrar" height="37px" width="170px"
+												style="font-size:18px" />
+										</hlayout>
+									</h:form>
+								</hlayout>
+								<vlayout width="100%">
+									<separator />
+									<separator />
+									<label id="lblVersion"
+											sclass="pointer" value="Version 1.0.0 "
+											style="color:black;margin-left:10px;font-weight:bold;font-size:10px" />
+									<!-- <a href="">
+										<label id="lblOlvidoClave"
+											sclass="pointer" value="¿Olvido su Contraseña?"
+											style="color:red;margin-left:10px;font-weight:bold;font-size:14px" />
+									</a> -->
+								</vlayout>
+							</groupbox>
+						</div>
+					</vbox>
+				</div>
+			</center>
+			<east></east>
+			<west></west>
 		</borderlayout>
 	</window>
 </zk>
